Sep 23, 2015 - chris ---------------------------------------------------
o Merging the functionality of hamsterdb pro
o Changed license to GPL 3.0

Aug 26, 2015 - chris ---------------------------------------------------
o issue #58 (.NET) - fixed crash in ham_strerror

Jun 19, 2015 - chris ---------------------------------------------------
o Fixing a bug during recovery where modified pages were not recreated
o Reducing ftruncate() system calls

Jun 04, 2015 - chris ---------------------------------------------------
o Fixing compilation with --disable-remote

Jun 03, 2015 - chris ---------------------------------------------------
o Make sure that journal is correclty cleared after recovery

May 26, 2015 - chris ---------------------------------------------------
o Make sure that errors are not ignored when creating remote cursors
	(thanks, Ciprian Niculescu)

May 07, 2015 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.11

May 06, 2015 - chris ---------------------------------------------------
o C++ API no longer throws exceptions in destructors (thanks, Michael Möllney)
o issue #49: fixed approx. matching issue with remote server

May 04, 2015 - chris ---------------------------------------------------
o issue #53: fixed race condition on Win32

Apr 06, 2015 - chris ---------------------------------------------------
o issue #52: fixed cursor iteration w/ txns and approx matching
o issue #50: removing problematic debug checks

Apr 04, 2015 - chris ---------------------------------------------------
o Add InsertRecNo method to hamsterdb-dotnet (thanks, mjmckp)

Mar 06, 2015 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.10

Feb 18, 2015 - chris ---------------------------------------------------
o When reading records from mmapped storage, a pointer into the storage
	is returned and the record data is no longer copied
