@@ -28,12 +28,10 @@ print_banner(const char *program_name)
   uint32_t maj, min, rev;
   ham_get_version(&maj, &min, &rev);
 
-  printf("hamsterdb %s%d.%d.%d - Copyright (C) 2005-2015 "
-       "Christoph Rupp (chris@crupp.de).\n\n",
-       ham_is_pro() ? "pro " : "", maj, min, rev);
+  printf("hamsterdb %d.%d.%d - Copyright (C) 2005-2015 "
+       "Christoph Rupp (chris@crupp.de).\n\n", maj, min, rev);
 
-  if (!ham_is_pro())
-    printf(
+  printf(
 "This program is free software: you can redistribute it and/or modify\n"
 "it under the terms of the GNU General Public License as published by\n"
 "the Free Software Foundation, either version 3 of the License, or\n"
@@ -43,12 +41,5 @@ print_banner(const char *program_name)
 "but WITHOUT ANY WARRANTY; without even the implied warranty of\n"
 "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n"
 "GNU General Public License for more details.\n\n");
-  else {
-    time_t end = ham_is_pro_evaluation();
-    if (end != 0)
-      printf("Commercial evaluation version; valid till %s.\n", ctime(&end));
-    else
-      printf("Commercial version.\n\n");
-  }
 }
 
